--- a/core/med-components/themes/medsoft-scheme-light.scss
+++ b/core/med-components/themes/medsoft-scheme-light.scss
@@ -2,7 +2,7 @@
 @import "../variables";
 @import "../mixins";
 
-$med-saturation: 40%;
+//$med-saturation: 40%;
 
 $new-medsoft-colors-feedback: (
   success: (
@@ -18,6 +18,8 @@ $new-medsoft-colors-feedback: (
 
 $new-medsoft-colors: (
   brand: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl($med-brand, $med-saturation, $med-lightest),
     2: hsl($med-brand, $med-saturation, $med-light),
     3: hsl($med-brand, $med-saturation, $med-medium),
@@ -26,6 +28,8 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-brand, $med-saturation, $med-medium), hsl($med-brand, $med-saturation, $med-lightest)),
   ),
   aulas: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl($med-aulas, $med-saturation, $med-lightest),
     2: hsl($med-aulas, $med-saturation, $med-light),
     3: hsl($med-aulas, $med-saturation, $med-medium),
@@ -34,6 +38,8 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-aulas, $med-saturation, $med-medium), hsl($med-aulas, $med-saturation, $med-lightest)),
   ),
   material: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl($med-material, $med-saturation, $med-lightest),
     2: hsl($med-material, $med-saturation, $med-light),
     3: hsl($med-material, $med-saturation, $med-medium),
@@ -42,6 +48,8 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-material, $med-saturation, $med-medium), hsl($med-material, $med-saturation, $med-lightest)),
   ),
   questoes: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl($med-questoes, $med-saturation, $med-lightest),
     2: hsl($med-questoes, $med-saturation, $med-light),
     3: hsl($med-questoes, $med-saturation, $med-medium),
@@ -50,6 +58,8 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-questoes, $med-saturation, $med-medium), hsl($med-questoes, $med-saturation, $med-lightest)),
   ),
   revalida: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl($med-revalida, $med-saturation, $med-lightest),
     2: hsl($med-revalida, $med-saturation, $med-light),
     3: hsl($med-revalida, $med-saturation, $med-medium),
@@ -58,6 +68,8 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-revalida, $med-saturation, $med-medium), hsl($med-revalida, $med-saturation, $med-lightest)),
   ),
   provas: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl($med-provas, $med-saturation, $med-lightest),
     2: hsl($med-provas, $med-saturation, $med-light),
     3: hsl($med-provas, $med-saturation, $med-medium),
@@ -66,6 +78,8 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-provas, $med-saturation, $med-medium), hsl($med-provas, $med-saturation, $med-lightest)),
   ),
   success: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl(128, 80, 30),
     2: hsl(128, 80, 30),
     3: hsl(128, 80, 30),
@@ -74,6 +88,8 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-brand, 10, 25), hsl($med-brand, 10, 45)),
   ),
   warning: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl(43, 80, 45),
     2: hsl(43, 80, 45),
     3: hsl(43, 80, 45),
@@ -82,6 +98,8 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-brand, 10, 25), hsl($med-brand, 10, 45)),
   ),
   caution: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl(4, 80, 40),
     2: hsl(4, 80, 40),
     3: hsl(4, 80, 40),
@@ -90,6 +108,8 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-brand, 10, 75), hsl($med-brand, 10, 95)),
   ),
   light: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl($med-brand, 10, 5),
     2: hsl($med-brand, 10, 15),
     3: hsl($med-brand, 10, 25),
@@ -98,6 +118,8 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-brand, 10, 25), hsl($med-brand, 10, 45)),
   ),
   dark: (
+    contrast-1: #000,
+    contrast-2: #fff,
     1: hsl($med-brand, 10, 55),
     2: hsl($med-brand, 10, 65),
     3: hsl($med-brand, 10, 75),
