add focus fallback; add rtl tests

--- a/core/src/components/segment/test/a11y/index.html
+++ b/core/src/components/segment/test/a11y/index.html
@@ -14,9 +14,9 @@
 
   <body>
     <ion-app>
-      <h1>Segment</h1>
       <ion-content>
-        <ion-segment aria-label="Tab Options" color="dark" value="reading-list">
+        <h1>Segment</h1>
+        <ion-segment aria-label="Tab Options" color="dark">
           <ion-segment-button value="bookmarks">
             <ion-label>Bookmarks</ion-label>
           </ion-segment-button>
@@ -27,9 +27,6 @@
             <ion-label>Shared Links</ion-label>
           </ion-segment-button>
         </ion-segment>
-        <ion-item>
-          <ion-input></ion-input>
-        </ion-item>
       </ion-content>
     </ion-app>
   </body>
