Ajuste chart e accordion

--- a/core/src/components/medgrupo/global/med-accordion/med-accordion.scss
+++ b/core/src/components/medgrupo/global/med-accordion/med-accordion.scss
@@ -17,6 +17,7 @@
     width: 100%;
     padding: $med-spacing-inset-sm;
     box-sizing: border-box;
+    line-height: line-height();
   }
 
   .med-accordion__icon-container {
