Squashed commit of the following:
commit 68262635eee28062abeb0d126dd48fde55dae9b0
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Tue Jul 13 17:11:47 2021 -0300

    icon

commit 8db60e6596f060d0338ddf68e8122818a1e3e41c
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Tue Jul 13 16:10:44 2021 -0300

    themas

commit eff44574ac6bb369154e1152c1211ab490dfa9c8
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Tue Jul 13 15:58:53 2021 -0300

    neutrals

commit 2e05e64e7d42598e919336cbca6785bf7b5596b8
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Tue Jul 13 15:40:29 2021 -0300

    theme

commit 9411103cc3640d52d15c683e52ff372ee2d6f4aa
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Mon Jul 12 15:03:04 2021 -0300

    neutrals

--- a/core/med-components/_mixins.scss
+++ b/core/med-components/_mixins.scss
@@ -269,7 +269,7 @@
   --med-color-gradient: var(--med-color-#{$color-name}-gradient, #{$gradient}) !important;
 }
 
-@mixin generate-medsoft-color-classes {
+@mixin generate-medsoft-color-classes() {
   @each $color-name, $value in $medsoft-colors {
     @if $color-name != 'neutral-light' and $color-name != 'neutral-dark'{
       .ion-color-#{$color-name} {
@@ -419,6 +419,8 @@
         @include new-generate-medsoft-color-classes($color-name);
       }
     }
+
+    @include generate-neutrals(true);
   }
 }
 
@@ -505,5 +507,44 @@
         @include new-generate-medsoft-color-classes($color-name);
       }
     }
+  }
+}
+
+@mixin generate-neutrals($invert: false) {
+  $index: 1;
+
+  @each $key, $value in $med-neutrals {
+    @if $index <= 6 {
+      .med-neutral-#{$key} {
+        $neutral: map-get($med-neutrals, $key);
+
+        --med-neutral: var(--med-neutral-#{$key}, #{$neutral}) !important;
+        --med-neutral-rgb: var(--med-neutral-#{$key}-rgb, #{color-to-rgb-list($neutral)}) !important;
+        @if not $invert {
+          --med-neutral-contrast: #fff !important;
+          --med-neutral-contrast-rgb: #{color-to-rgb-list(#fff)} !important;
+        } @else {
+          --med-neutral-contrast: #000 !important;
+          --med-neutral-contrast-rgb: #{color-to-rgb-list(#000)} !important;
+        }
+      }
+    } @else {
+      .med-neutral-#{$key} {
+        $neutral: map-get($med-neutrals, $key);
+
+        --med-neutral: var(--med-neutral-#{$key}, #{$neutral}) !important;
+        --med-neutral-rgb: var(--med-neutral-#{$key}-rgb, #{color-to-rgb-list($neutral)}) !important;
+
+        @if not $invert {
+          --med-neutral-contrast: #000 !important;
+          --med-neutral-contrast-rgb: #{color-to-rgb-list(#000)} !important;
+        } @else {
+          --med-neutral-contrast: #fff !important;
+          --med-neutral-contrast-rgb: #{color-to-rgb-list(#fff)} !important;
+        }
+      }
+    }
+
+    $index: $index + 1;
   }
 }
