--- a/core/med-components/themes/medsoft-scheme-light.scss
+++ b/core/med-components/themes/medsoft-scheme-light.scss
@@ -1,20 +1,34 @@
 @import "../functions";
-@import "../variables";
 @import "../mixins";
 
-//$med-saturation: 40%;
+//hue
+$med-brand: 188;
+$med-aulas: 168;
+$med-material: 24;
+$med-questoes: 200;
+$med-revalida: 342;
+$med-provas: 268;
 
-$new-medsoft-colors-feedback: (
-  success: (
-    3: hsl(128, 80, 30),
-  ),
-  warning: (
-    3: hsl(43, 80, 45),
-  ),
-  caution: (
-    3: hsl(4, 80, 40),
-  )
-);
+$med-saturation: 40%;
+
+// luminosity
+$med-darkest: 20%;
+$med-dark: 30%;
+$med-medium: 40%;
+$med-light: 60%;
+$med-lightest: 80%;
+
+// $new-medsoft-colors-feedback: (
+//   success: (
+//     3: hsl(128, 80, 30),
+//   ),
+//   warning: (
+//     3: hsl(43, 80, 45),
+//   ),
+//   caution: (
+//     3: hsl(4, 80, 40),
+//   )
+// );
 
 $new-medsoft-colors: (
   brand: (
@@ -78,7 +92,7 @@ $new-medsoft-colors: (
     gradient: linear-gradient(to right, hsl($med-provas, $med-saturation, $med-medium), hsl($med-provas, $med-saturation, $med-lightest)),
   ),
   success: (
-    contrast-1: #000,
+    contrast-1: #fff,
     contrast-2: #fff,
     1: hsl(128, 80, 30),
     2: hsl(128, 80, 30),
@@ -107,26 +121,19 @@ $new-medsoft-colors: (
     5: hsl(4, 80, 40),
     gradient: linear-gradient(to right, hsl($med-brand, 10, 75), hsl($med-brand, 10, 95)),
   ),
-  light: (
-    contrast-1: #000,
-    contrast-2: #fff,
-    1: hsl($med-brand, 10, 5),
-    2: hsl($med-brand, 10, 15),
-    3: hsl($med-brand, 10, 25),
-    4: hsl($med-brand, 10, 35),
-    5: hsl($med-brand, 10, 45),
-    gradient: linear-gradient(to right, hsl($med-brand, 10, 25), hsl($med-brand, 10, 45)),
-  ),
-  dark: (
-    contrast-1: #000,
-    contrast-2: #fff,
-    1: hsl($med-brand, 10, 55),
-    2: hsl($med-brand, 10, 65),
-    3: hsl($med-brand, 10, 75),
-    4: hsl($med-brand, 10, 85),
-    5: hsl($med-brand, 10, 95),
-    gradient: linear-gradient(to right, hsl($med-brand, 10, 75), hsl($med-brand, 10, 95)),
-  )
 );
+
+$med-neutrals: (
+  '1': #f1f3f4,
+  '2': #d5dcdd,
+  '3': #b9c4c6,
+  '4': #9dacaf,
+  '5': #819598,
+  '6': #677b7e,
+  '7': #506062,
+  '8': #394446,
+  '9': #22292a,
+  '10': #0b0e0e,
+) !default;
 
 @include new-generate-custom-scheme('light');
