refact: melhorado classes css

--- a/core/src/components/medgrupo/global/med-image-zoom/med-image-zoom.scss
+++ b/core/src/components/medgrupo/global/med-image-zoom/med-image-zoom.scss
@@ -35,46 +35,50 @@
     height: 100%;
   }
 
-  .swiper-zoom-container div {
+  .swiper-zoom-container {
     flex-direction: column;
     margin: 0 16px;
   }
 
-  .img1 {
+  .zoom-imagem {
     width: auto;
     max-width: calc(100% - 100px);
     height: auto;
     max-height: calc(100% - 100px);
   }
 
-  .legenda {
-    color: #fff;
-    font-size: 14px;
-    margin: 0;
-    padding: 1em 4em;
-    max-width: 992px !important;
-    overflow-x: auto;
-    text-align: justify !important;
+  .zoom-legenda-container {
+    padding: 16px 52px;
+    text-align: center;
   }
 
-  .marcaAguaSuperior {
+  .zoom-legenda {
+    display: inline-block;
+    color: #fff;
+    font-size: 14px;
+    max-width: 992px;
+    overflow-y: auto;
+    max-height: 50px;
+  }
+
+  .marca-agua-superior {
     position: absolute;
-    left: 12%;
-    top: 40%;
+    top: 29%;
     z-index: 1;
-    width: auto;
+    width: 100%;
+    text-align: center;
     font-size: 2.5em;
     opacity: 0.01;
     color: #673ab7;
     pointer-events: none;
   }
 
-  .marcaAguaInferior {
+  .marca-agua-inferior {
     position: absolute;
-    left: 5%;
-    top: 60%;
+    top: 52%;
     z-index: 1;
-    width: auto;
+    width: 100%;
+    text-align: center;
     font-size: 2.5em;
     opacity: 0.02;
     color: red;
