change API to selectOnFocus; add descriptive comments

--- a/core/src/components/segment/test/a11y/index.html
+++ b/core/src/components/segment/test/a11y/index.html
@@ -16,7 +16,7 @@
     <ion-app>
       <ion-content>
         <h1>Segment</h1>
-        <ion-segment aria-label="Tab Options" color="dark">
+        <ion-segment aria-label="Tab Options" color="dark" select-on-focus>
           <ion-segment-button value="bookmarks">
             <ion-label>Bookmarks</ion-label>
           </ion-segment-button>
