--- a/core/src/components/select/test/basic/index.html
+++ b/core/src/components/select/test/basic/index.html
@@ -135,7 +135,7 @@
 
         <ion-item>
           <ion-label>Favorite food</ion-label>
-          <ion-select name="food" interface="popover">
+          <ion-select name="food" interface="popover" value="steak">
             <ion-select-option value="steak">Steak</ion-select-option>
             <ion-select-option value="pizza">Pizza</ion-select-option>
             <ion-select-option value="tacos">Tacos</ion-select-option>
