--- a/core/src/components/medgrupo/team/med-alternativas/med-alternativas.scss
+++ b/core/src/components/medgrupo/team/med-alternativas/med-alternativas.scss
@@ -107,6 +107,7 @@
       line-height: calc(var(--font-size) * 1.3);
       text-align: justify;
       margin: 0;
+      cursor: pointer;
     }
 
     &__image {
