add docs, update styles

--- a/core/src/components/toast/toast.scss
+++ b/core/src/components/toast/toast.scss
@@ -121,8 +121,7 @@
 }
 
 .toast-icon {
-  @include margin(0, 0, 0, 15px);
-  @include padding(10px, 10px, 10px, 10px);
+  @include margin(null, null, null, 16px);
 }
 
 .toast-message {
