Add require-long-press prop. Rename vars.

--- a/core/src/components/reorder-group/test/basic/index.html
+++ b/core/src/components/reorder-group/test/basic/index.html
@@ -26,7 +26,7 @@
 
     <ion-content id="content">
       <ion-list>
-        <ion-reorder-group id="reorder">
+        <ion-reorder-group id="reorder" require-long-press="true">
           <ion-item button onclick="openAlert()">
             <ion-label>
               Item 1 (default ion-reorder)
