--- a/core/src/components/datetime/test/hour-cycle/index.html
+++ b/core/src/components/datetime/test/hour-cycle/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title>Datetime - Time format</title>
+    <title>Datetime - Hour cycle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link href="../../../../../css/ionic.bundle.css" rel="stylesheet">
     <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
@@ -34,22 +34,22 @@
     <ion-app>
       <ion-header translucent="true">
         <ion-toolbar>
-          <ion-title>Datetime - Time format</ion-title>
+          <ion-title>Datetime - Hour Cycle</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content class="ion-padding">
         <div class="grid">
           <div class="grid-item">
-            <h2>Default Time format</h2>
+            <h2>Default Hour cycle</h2>
             <ion-datetime></ion-datetime>
           </div>
           <div class="grid-item">
-            <h2>24h Time format</h2>
-            <ion-datetime time-format="24h"></ion-datetime>
+            <h2>h23 Hour cycle</h2>
+            <ion-datetime hour-cycle="h23"></ion-datetime>
           </div>
           <div class="grid-item">
-            <h2>12h Time format</h2>
-            <ion-datetime time-format="12h"></ion-datetime>
+            <h2>h12 Hour cycle</h2>
+            <ion-datetime hour-cycle="h12"></ion-datetime>
           </div>
         </div>
       </ion-content>
