--- a/core/src/components/reorder-group/test/basic/index.html
+++ b/core/src/components/reorder-group/test/basic/index.html
@@ -9,8 +9,7 @@
   <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
   <script src="../../../../../scripts/testing/scripts.js"></script>
   <script nomodule src="../../../../../dist/ionic/ionic.js"></script>
-  <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
-</head>
+  <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script></head>
 
 <body>
   <ion-app>
@@ -168,9 +167,7 @@
       reorderGroup.disabled = !reorderGroup.disabled;
       requireLongPressButton.style.display = (reorderGroup.disabled) ? 'none' : 'block';
 
-      reorderGroup.addEventListener('ionItemReorder', ({
-        detail
-      }) => {
+      reorderGroup.addEventListener('ionItemReorder', ({detail}) => {
         console.log('Dragged from index', detail.from, 'to', detail.to);
 
         detail.complete();
