test: add e2e tests

--- a/core/src/components/action-sheet/test/basic/index.html
+++ b/core/src/components/action-sheet/test/basic/index.html
@@ -434,14 +434,17 @@
         buttons: [
           {
             text: 'Option 1',
+            id: 'option',
             data: {
               type: '1'
             }
           },
           {
-            text: 'Option 2',
+            text: 'Cancel',
+            role: 'cancel',
+            id: 'cancel',
             data: {
-              type: '2'
+              type: 'cancel'
             }
           }
         ]
