--- a/core/src/components/back-button/back-button.scss
+++ b/core/src/components/back-button/back-button.scss
@@ -92,6 +92,13 @@
   font-kerning: none;
 }
 
+// Back Button Ripple effect
+// --------------------------------------------------
+
+:host ion-ripple-effect {
+  color: var(--ripple-color);
+}
+
 
 // Back Button with Color
 // --------------------------------------------------
