chore: remove host

--- a/core/src/components/back-button/back-button.scss
+++ b/core/src/components/back-button/back-button.scss
@@ -95,7 +95,7 @@
 // Back Button Ripple effect
 // --------------------------------------------------
 
-:host ion-ripple-effect {
+ion-ripple-effect {
   color: var(--ripple-color);
 }
 
